# be-ai-model

./: .flake8  README.md  data_processing.py  final_result.py  lstm_model.py  main.ipynb  merged_main.ipynb  pyproject.toml  sentiment_model.py  train_model_main.ipynb
.github/workflows/: ci-cd.yml
colab/: run_model.ipynb  train_model.ipynb
local/: main.py
models/: AAPL_finn_model.keras  AAPL_finn_scaler.pkl  AMZN_finn_model.keras  AMZN_finn_scaler.pkl  AVGO_finn_model.keras  AVGO_finn_scaler.pkl  BRK-B_finn_model.keras  BRK-B_finn_scaler.pkl  COST_finn_model.keras  COST_finn_scaler.pkl  GOOGL_finn_model.keras  GOOGL_finn_scaler.pkl  HD_finn_model.keras  HD_finn_scaler.pkl  JNJ_finn_model.keras  JNJ_finn_scaler.pkl  JPM_finn_model.keras  JPM_finn_scaler.pkl  LLY_finn_model.keras  LLY_finn_scaler.pkl  MA_finn_model.keras  MA_finn_scaler.pkl  META_finn_model.keras  META_finn_scaler.pkl  MSFT_finn_model.keras  MSFT_finn_scaler.pkl  NVDA_finn_model.keras  NVDA_finn_scaler.pkl  TSM_finn_model.keras  TSM_finn_scaler.pkl  UNH_finn_model.keras  UNH_finn_scaler.pkl  V_finn_model.keras  V_finn_scaler.pkl  WMT_finn_model.keras  WMT_finn_scaler.pkl  XOM_finn_model.keras  XOM_finn_scaler.pkl  tsla_finn_model.keras  tsla_finn_scaler.pkl
scripts/: listener.py  main.py  requirements.txt
source/: config.py  exceptions.py  input_processing.py  logging_config.py  lstm_model.py  market_capitalization.py  sentiment_model.py
