[project]
name = "be-ai-model"
version = "0.1.0"
description = ""
authors = [
    {name = "anacnoda77",email = "sm1108shin@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
