[project]
name = "be-ai-model"
version = "0.1.0"
description = ""
authors = [
    {name = "anacnoda77",email = "sm1108shin@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "supabase (>=2.15.3,<3.0.0)",
    "finnhub-python (>=2.4.23,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "oci (>=2.154.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
